<resources>
    <string name="app_name">CookingBookApp</string>
    <string name="action_settings">Settings</string>
    <string name="search_fragment_label">Search recipes</string>
    <string name="details_fragment_label">Recipe details</string>
    <string name="recipe_list_fragment_label">Results</string>
    <string name="favourite_recipe_list_fragment_label">Favourite recipes</string>
    <string name="search">Search</string>
    <string name="search_hint">What do You want to search?</string>
    <string name="favourites">Favourites</string>
    <string name="recipe_searcher">Recipe Searcher</string>
    <string name="dish_picture">Dish picture</string>
    <string name="preparation_steps">Preparation steps</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
</resources>