<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.soltys.cookingbookmobile.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_favouriteRecipeListFragment"
            app:destination="@id/favouriteRecipeListFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.soltys.cookingbookmobile.RecipeListFragment"
        android:label="@string/recipe_list_fragment_label"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_SecondFragment_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeDetailsFragment"
        android:name="com.soltys.cookingbookmobile.RecipeDetailsFragment"
        android:label="@string/details_fragment_label"
        tools:layout="@layout/fragment_details" />
    <fragment
        android:id="@+id/favouriteRecipeListFragment"
        android:name="com.soltys.cookingbookmobile.FavouriteRecipeListFragment"
        android:label="@string/favourite_recipe_list_fragment_label"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_favouriteRecipeListFragment_to_favouriteRecipeDetailsFragment"
            app:destination="@id/favouriteRecipeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favouriteRecipeDetailsFragment"
        android:name="com.soltys.cookingbookmobile.FavouriteRecipeDetailsFragment"
        android:label="@string/details_fragment_label"
        tools:layout="@layout/fragment_favourite_details" />
</navigation>